[package]
name = "vaultls"
version = "0.1.0"
edition = "2021"
description = "A fast CLI for listing and diffing secrets across HashiCorp Vault namespaces with colored output."
license = "MIT"

[[bin]]
name = "vaultls"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
